// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemporaryStorageField switched off snapshot 1`] = `
<div
  className="pf-c-form__group"
>
  <div
    className="pf-c-form__group-label"
  >
    <label
      className="pf-c-form__label"
    >
      <span
        className="pf-c-form__label-text"
      >
        Temporary Storage
      </span>
    </label>
     
  </div>
  <div
    className="pf-c-form__group-control"
  >
    <label
      className="pf-c-switch"
      data-ouia-component-id="OUIA-Generated-Switch-1"
      data-ouia-component-type="PF4/Switch"
      data-ouia-safe={true}
      htmlFor="temporary-storage-switch"
    >
      <input
        aria-label="Temporary Storage"
        aria-labelledby={null}
        checked={false}
        className="pf-c-switch__input"
        disabled={false}
        id="temporary-storage-switch"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="pf-c-switch__toggle"
      >
        <div
          aria-hidden="true"
          className="pf-c-switch__toggle-icon"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={null}
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            />
          </svg>
        </div>
      </span>
    </label>
    
  </div>
</div>
`;

exports[`TemporaryStorageField switched on snapshot 1`] = `
<div
  className="pf-c-form__group"
>
  <div
    className="pf-c-form__group-label"
  >
    <label
      className="pf-c-form__label"
    >
      <span
        className="pf-c-form__label-text"
      >
        Temporary Storage
      </span>
    </label>
     
  </div>
  <div
    className="pf-c-form__group-control"
  >
    <label
      className="pf-c-switch"
      data-ouia-component-id="OUIA-Generated-Switch-2"
      data-ouia-component-type="PF4/Switch"
      data-ouia-safe={true}
      htmlFor="temporary-storage-switch"
    >
      <input
        aria-label="Temporary Storage"
        aria-labelledby={null}
        checked={true}
        className="pf-c-switch__input"
        disabled={false}
        id="temporary-storage-switch"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="pf-c-switch__toggle"
      >
        <div
          aria-hidden="true"
          className="pf-c-switch__toggle-icon"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={null}
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            />
          </svg>
        </div>
      </span>
    </label>
    
  </div>
</div>
`;
